WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225764
[GTK] Wrong smooth animation sometimes with non-async scrolling
https://bugs.webkit.org/show_bug.cgi?id=225764
Summary
[GTK] Wrong smooth animation sometimes with non-async scrolling
Carlos Garcia Campos
Reported
2021-05-13 06:33:44 PDT
This is easy to reproduce with epiphany, opening the browser with a several of tabs. Then go tab by tab scrolling and some of them don't scroll properly, the smooth animation is wrong. This is happening because sometimes when the scrollbars are added to the scroll view, the contents size hasn't been updated yet, so that values saved by ScrollAnimationSmooth::updateVisibleLengths() are 0x0. After that the updateVisibleLengths() is not called again when the contents size is updated, so scroll happens with the wrong visible lengths. This doesn't happen with async scrolling because updateVisibleLengths() is called every time layers are repositioned. For non-async scrolling it should be enough to update visible lengths when he contents size changes.
Attachments
Patch
(2.48 KB, patch)
2021-05-13 06:36 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-05-13 06:36:12 PDT
Created
attachment 428512
[details]
Patch
Carlos Garcia Campos
Comment 2
2021-05-13 22:52:55 PDT
Committed
r277482
(
237717@main
): <
https://commits.webkit.org/237717@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug